--- a/project/pom.xml
+++ b/project/pom.xml
@@ -14,7 +14,51 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+  <dependency>
+
+<groupId>org.springframework</groupId>
+
+<artifactId>spring-context</artifactId>
+
+<version> 5.0.7.RELEASE</version>
+
+</dependency>
+<dependency>
+
+<groupId>org.springframework</groupId>
+
+<artifactId>spring-webmvc</artifactId>
+
+<version>5.0.7.RELEASE</version>
+
+</dependency>
+<dependency>
+
+<groupId>javax.servlet</groupId>
+
+<artifactId>javax.servlet-api</artifactId>
+
+<version>4.0.0</version>
+
+</dependency>
+<dependency>
+
+<groupId>com.fasterxml.jackson.core</groupId>
+
+<artifactId>jackson-databind</artifactId>
+
+<version>2.9.6</version>
+
+</dependency>
   </dependencies>
+  <properties>
+
+<maven.compiler.target>1.8</maven.compiler.target>
+
+<maven.compiler.source>1.8</maven.compiler.source>
+
+</properties>
+
   <build>
     <finalName>project</finalName>
   </build>
