--- a/AirportWebProject/pom.xml
+++ b/AirportWebProject/pom.xml
@@ -42,6 +42,11 @@
 
 		</dependency>
 		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
 
 			<groupId>com.fasterxml.jackson.core</groupId>
 
