--- a/AirportWebProject/pom.xml
+++ b/AirportWebProject/pom.xml
@@ -25,6 +25,24 @@
 		</dependency>
 		<dependency>
 
+			<groupId>org.hibernate</groupId>
+
+			<artifactId>hibernate-core</artifactId>
+
+			<version>5.3.6.Final</version>
+
+		</dependency>
+		<dependency>
+
+			<groupId>mysql</groupId>
+
+			<artifactId>mysql-connector-java</artifactId>
+
+			<version>8.0.12</version>
+
+		</dependency>
+		<dependency>
+
 			<groupId>org.springframework</groupId>
 
 			<artifactId>spring-webmvc</artifactId>
